<resources>
    <string name="app_name">StudentLead</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="student_lead_logo">Student Lead logo</string>
    <string name="identifier">Identifier</string>
    <string name="identifier_hint">20220325@nctu.edu.eg</string>
    <string name="password_label">Password</string>
    <string name="password_hint">••••••••</string>
    <string name="what_is_identifier">What is identifier?</string>
    <string name="sign_in_button">Sign in</string>
    <string name="required_fields">Please fill in all fields</string>
    <string name="user_identifier_not_found">No user found with this identifier</string>
    <string name="email_not_found_nid">Email not found for this national ID</string>
    <string name="no_user_nid">No user found with this identifier</string>
    <string name="email_not_found_sc">Email not found for this student code</string>
    <string name="user_not_found_sc">No user found with this identifier</string>
    <string name="identifier_description">Identifier is either Email Address, National ID, or Student code</string>
    <string name="create_account">Create account</string>
    <string name="find_student_code">Find student code</string>
    <string name="forgot_password">Forgot password?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="prof_name">Name of Doctor/Teacher</string>
    <string name="description">Description</string>
</resources>