<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.login.view.LoginActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_marginBottom="30dp"
            android:contentDescription="@string/student_lead_logo"
            android:src="@drawable/logo_w_bg" />

        <LinearLayout
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">

            <TextView
                android:id="@+id/identifierLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_weight="1"
                android:fontFamily="@font/readex_pro_medium"
                android:text="@string/identifier"
                android:textSize="18sp" />

            <Button
                android:id="@+id/whatIsIdentifier"
                style="?attr/materialIconButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@string/what_is_identifier"
                app:icon="@drawable/baseline_info_24" />

        </LinearLayout>

        <EditText
            android:id="@+id/identifier"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:autofillHints="emailAddress"
            android:background="@drawable/layout_login_input"
            android:fontFamily="@font/readex_pro_regular"
            android:hint="@string/identifier_hint"
            android:inputType="text"
            android:padding="12dp"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/passwordLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/readex_pro_medium"
            android:text="@string/password_label"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:autofillHints="password"
            android:background="@drawable/layout_login_input"
            android:fontFamily="@font/readex_pro_regular"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:padding="12dp"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:fontFamily="@font/readex_pro_regular"
                android:text="@string/forgot_password"
                android:gravity="start"
                android:textColor="@color/student_blue" />
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:fontFamily="@font/readex_pro_regular"
                android:gravity="end"
                android:text="@string/find_student_code"
                android:textColor="@color/student_blue" />
        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/signInButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_button_bg"
                android:enabled="true"
                android:fontFamily="@font/readex_pro_light"
                android:text="@string/sign_in_button"
                android:textAllCaps="true"
                android:textSize="16sp"
                app:backgroundTint="@color/button_blue" />

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center"
                android:foregroundTint="@color/white"
                android:visibility="gone" />
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_gravity="center"
                android:layout_marginEnd="4dp"
                android:layout_weight="1"
                android:background="@color/or_separator_color" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/readex_pro_bold"
                android:text="OR"
                android:textColor="@color/or_separator_color" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_gravity="center"
                android:layout_marginStart="4dp"
                android:layout_weight="1"
                android:background="@color/or_separator_color" />
        </LinearLayout>

        <Button
            android:id="@+id/signUpButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_button_bg"
            android:enabled="true"
            android:fontFamily="@font/readex_pro_light"
            android:text="@string/create_account"
            android:textAllCaps="true"
            android:textSize="16sp"
            app:backgroundTint="@color/button_purple" />


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>